--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					</article>
 					<article>
 						<header>
-							<h2>Publishments</h2>
+							<h2>Publications</h2>
 						</header>
 						<h3>Smart Parking System using OpenALPR</h3>
 						<p>
@@ -68,7 +68,7 @@
 							 and electronic parking fees collection based on OpenALPR. The aim of this project is to develop and 
 							 implement an automatic parking system.
 						</p>
-						<a href="https://www.testmagzine.biz/index.php/testmagzine/article/view/8234">Click here to view publication</a>
+						<a href="https://www.testmagzine.biz/index.php/testmagzine/article/view/8234">View publication</a>
 					</article>
 				</section>
 				<ul class="actions special">
@@ -79,7 +79,7 @@
 				<section class="split contact">
 					<section>
 						<h3>Phone</h3>
-						<p><a href="tel: +918277660015">(+91) 827760015</a></p>
+						<p><a href="tel: +918277660015">(+91) 8277660015</a></p>
 					</section>
 					<section>
 						<h3>Email</h3>
