--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 						<header>
 							<h2>Tools and Technologies</h2>
 						</header>
+						<h3>Spring Boot</h3>
+						<h3>React Framework</h3>
 						<h3>Django</h3>
 						<h3>Flask</h3>
 						<h3>Node</h3>
@@ -68,7 +70,7 @@
 							 and electronic parking fees collection based on OpenALPR. The aim of this project is to develop and 
 							 implement an automatic parking system.
 						</p>
-						<a href="https://www.testmagzine.biz/index.php/testmagzine/article/view/8234">Click here to view publication</a>
+						<a href="https://www.researchgate.net/publication/348390786_Application_Based_Smart_Parking_Reservation_System_using_OpenALPR">Click here to view publication</a>
 					</article>
 				</section>
 				<ul class="actions special">
