--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div id="intro">
 				<img id="dp" src="images/DP.png">
 				<h1>V Vijay Krishnan</h1>
-				<p>Tech enthusiast, Web and Android App developer. I convert coffee into code.</p>
+				<p>Tech enthusiast,Full-Stack Appication developer. I convert coffee into code.</p>
 				<ul class="actions">
 					<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 				</ul>
@@ -47,7 +47,7 @@
 							<h2>Tools and Technologies</h2>
 						</header>
 						<h3>Spring Boot</h3>
-						<h3>React Framework</h3>
+						<h3>React</h3>
 						<h3>Django</h3>
 						<h3>Flask</h3>
 						<h3>Node</h3>
